--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -52,3 +52,5 @@ map ctrl+v paste_from_clipboard
 # (Tùy chọn) Ctrl+Shift+C / Ctrl+Shift+V vẫn giữ nguyên
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
+
+remember_window_size yes
