--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -38,7 +38,7 @@ confirm_os_window_close 0
 # Tabs & splits
 map ctrl+shift+enter launch --location=hsplit
 map ctrl+shift+e launch --location=vsplit
-map ctrl+shift+t new_tab
+map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+w close_tab
 map ctrl+tab next_tab
 map ctrl+shift+tab previous_tab
@@ -54,3 +54,24 @@ map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
 
 remember_window_size yes
+
+# ----- TAB APPEARANCE -----
+tab_bar_style powerline
+tab_bar_edge top
+tab_bar_min_tabs 1
+active_tab_foreground   #1E1E2E
+active_tab_background   #89B4FA
+inactive_tab_foreground #BAC2DE
+inactive_tab_background #313244
+tab_bar_background #1E1E2E
+
+# Bo góc tab (giả lập)
+tab_title_template "{index}: {title}"
+
+# Font đậm cho tab đang active
+active_tab_font_style bold
+inactive_tab_font_style normal
+
+# Padding cho tab
+tab_bar_margin_width 10
+tab_bar_margin_height 2
