--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -65,8 +65,11 @@ inactive_tab_foreground #BAC2DE
 inactive_tab_background #313244
 tab_bar_background #1E1E2E
 
-# Bo góc tab (giả lập)
+# Chỉ hiện số tab và tên thư mục, không hiện hostname
 tab_title_template "{index}: {title}"
+window_title_format "{title}"
+# Tự đổi title thành tên thư mục hiện tại
+shell_integration enabled
 
 # Font đậm cho tab đang active
 active_tab_font_style bold
