--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,7 +4,8 @@ font_family FiraCode Nerd Font
 bold_font FiraCode Nerd Font
 italic_font FiraCode Nerd Font
 bold_italic_font FiraCode Nerd Font
-font_size 13.0
+font_size 12.0
+line_height 1.0
 
 # Transparency (0 = trong suốt hoàn toàn, 1 = không trong suốt)
 background_opacity 1
